# RAGS-System

./: .gitignore  LEARNING.MD  README.md  app.py  generator.py  main.py  main2.py  packages.txt  processFile2.txt  processFile3.txt  processed_files.txt  pyproject.toml  requirements.txt  responses.txt  test2.py  wind-assist.txt
agent/: agent.py
docs/: Charting-a-Greener-Course-Embrace-CCS-on-Maritime-Vessels.extraction.md  Cheat Sheet Hydrogen (1).extraction.md  Clean Energy Market Analysis in the US.extraction.md  Clean investment US.extraction.md  Comparative Life Cycle Assessment of Bioethanol Production from Different Generations ofBiomass and Waste Feedstocks.extraction.md  Fuels Comparison.extraction.md  Green conversion of municipal solid wastes into fuels and chemicals.extraction.md  Waste to Fuel in NY.extraction.md
my_faiss_index3/: index.pkl
summerizer/: imageSummerizer.py  summarizer.py  textSummerizer.py
tf_idf/: tfidf_vectorizer.joblib  tfidf_vectorizer.pkl
utils/: helper.py
vectorStore/: vectorStore.py
workflow/: workflow.py
workflow/Evulation/: Evulaiton.py
workflow/models/: loadModel.py
workflow/nodes/: docReordering.py  generator.py  getContext.py  queryDecomposer.py  queryExpension.py  queryUpdater.py  queryWriter.py  reRanker.py
workflow/prompt/: prompt.py
workflow/states/: states.py
workflow/utils/: helper.py
